<resources>
    <string name="app_name">Золотарь</string>
    <string name="menu_item_profile">Профиль</string>
    <string name="menu_item_options">Настройки</string>
    <string name="menu_item_update">Обновления</string>

    <string name="str_debug1">Главное окно</string>
    <string name="str_debug2">Второе окно</string>
    <string name="str_debug3">Третье окно</string>

    <string name="str_hint_name">Ваше имя</string>
    <string name="str_hint_adress">Ваш адрес</string>
    <string name="str_hint_district">Район проживания</string>
    <string name="str_hint_phone">Ваш телефон для связи</string>
    <string name="str_hint_takecare">Следующие данные будут передаваться исполнителю Вашего заказа:</string>
    <string name="str_hint_common">Следующие данные будут использованы для составления Вашего заказа:</string>
    <string name="str_hint_obj_name">Наименование</string>
    <string name="str_hint_obj_adress">Адрес</string>
    <string name="str_hint_obj_to_point">Расстояние от подъезда до емкости</string>
    <string name="str_hint_obj_volume">Объем емкости</string>
    <string name="str_obj_title_new">Ввод нового объекта</string>
    <string name="str_obj_title_edit">Исправление информации по объекту</string>
    <string name="str_hint_obj_district">Район расположения</string>

    <string name="str_bt_confirm">Подтвердить</string>
    <string name="str_bt_cancel">Отмена</string>
    <string name="str_bt_gps">GPS</string>
    <string name="str_bt_obj_add">Добавить объект</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
