<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    tools:context="com.example.renovikov.zolotarclient1.MenuProfileActivity">




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/TIL_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="true"
            android:hint="@string/str_hint_name"
            android:inputType="textPersonName"
            android:maxLength="20" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/TIL_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="true"
            android:hint="@string/str_hint_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:phoneNumber="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_obj_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_bt_obj_add" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fr_object"
        android:name="com.example.renovikov.zolotarclient1.ObjectPreferencesFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" ></FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrl_obj_list"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/str_bt_confirm" />
</LinearLayout>
